--- a/action.yml
+++ b/action.yml
@@ -5,11 +5,11 @@ branding:
   icon: 'chevron-right'
   color: 'blue'
 inputs:
-  api-token:  # API token
+  token:  # api token
     description: 'API token from your Cursion account'
     required: true
     default: ''
-  run-type:  # type of run to execute
+  type:  # type of run to execute
     description: 'test, case, or flow'
     required: true
     default: 'test'
@@ -29,13 +29,23 @@ inputs:
     description: 'step-1:<value> step-2:<value>'
     required: false
     default: ''
+  api-root:  # custom api root 
+    description: 'Your custom API root url'
+    required: false
+    default: 'https://api.cursion.dev'
+  client-root:  # custom client root 
+    description: 'Your custom Client root url'
+    required: false
+    default: 'https://app.cursion.dev'
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.api-token }}
-    - ${{ inputs.run-type }}
+    - ${{ inputs.token }}
+    - ${{ inputs.type }}
     - ${{ inputs.site-id }}
     - ${{ inputs.case-id }}
     - ${{ inputs.flow-id }}
     - ${{ inputs.updates }}
+    - ${{ inputs.api-root }}
+    - ${{ inputs.client-root }}
